Fixed index page so bootstrap didn't break the form

--- a/your-first-pwapp-master/Top3PWA/css/AddTop3.css
+++ b/your-first-pwapp-master/Top3PWA/css/AddTop3.css
@@ -118,7 +118,7 @@
   }
 
   .inputwidth{
-      width:30em;
+      /*width:30em;*/
   }
 
   .centerthis{
